--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@
   src: url("Ganevia.ttf");
 }
 
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   background: #111;
   font-family: sans-serif;
@@ -13,7 +16,8 @@ body {
 
 canvas {
   position: fixed;
-  inset: 0;
+  top: 0;
+  left: 0;
   z-index: 0;
 }
 
